AbstractField: make "required" validator functional, so it can be used standalone